# OpenAI-SDK

1-Basics/: main.py  pyproject.toml
1-Basics/src/1_basics/: __init__.py
2-Tools/: main.py  pyproject.toml
2-Tools/src/2_tools/: __init__.py
chainlit_4/: assisgnment.txt  commands.txt  pyproject.toml
chainlit_4/src/agent/: __init__.py  main.py
chainlit_4/src/chainlit_4/: __init__.py
chainlit_4/src/chatbot/: app.py
chainlit_4/src/config/: __init__.py
local_context_3/: README.md  pyproject.toml
local_context_3/src/local_context_3/: __init__.py  chatbot.py  main.py  streaming.py
